--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-util": "^3.0.7",
     "image-webpack-loader": "^3.1.0",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "webpack-stream": "^3.2.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
