--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "ionic": "^2.1.18"
   },
   "devDependencies": {
+    "webpack": "^1.13.1",
     "bower": "^1.3.3",
     "gulp-imagemin": "^3.1.1",
     "gulp-util": "^3.0.7",
     "image-webpack-loader": "^3.1.0",
     "shelljs": "^0.3.0",
     "webpack-stream": "^3.2.0"
+  },
+  "scripts": {
+    "start": "babel-node start",
+    "build": "webpack"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
