--- a/package.json
+++ b/package.json
@@ -3,28 +3,48 @@
   "version": "1.1.1",
   "description": "myApp: An Ionic project",
   "dependencies": {
-    "angular-local-storage": "^0.5.0",
-    "angular-resource": "^1.6.1",
-    "bootstrap": "^3.3.7",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "ionic": "^2.1.18"
+    "angular-local-storage": "0.5.0",
+    "angular-resource": "1.6.1",
+    "ansi-html": "0.0.5",
+    "autoprefixer": "6.3.7",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.22.1",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-react-app": "2.2.0",
+    "body-parser": "~1.15.2",
+    "bootstrap": "3.3.7",
+    "chalk": "1.1.3",
+    "cookie-parser": "~1.4.0",
+    "eslint": "3.16.1",
+    "express": "~4.14.0",
+    "express-http-proxy": "~0.6.0",
+    "log4js": "~0.6.35",
+    "mockjs": "~1.0.1-beta3",
+    "request": "~2.67.0",
+    "eslint-config-react-app": "0.6.2",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.4.1",
+    "html-entities": "1.2.0",
+    "html-webpack-plugin": "2.24.0",
+    "image-webpack-loader": "3.1.0",
+    "postcss-assets": "^4.1.0",
+    "progress-bar-webpack-plugin": "1.9.3",
+    "sockjs-client": "1.0.1",
+    "strip-ansi": "3.0.1",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-notifier": "1.3.0"
   },
-  "devDependencies": {
-    "webpack": "^1.13.1",
-    "bower": "^1.3.3",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-util": "^3.0.7",
-    "image-webpack-loader": "^3.1.0",
-    "shelljs": "^0.3.0",
-    "webpack-stream": "^3.2.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "babel-node start",
-    "build": "webpack"
+    "build": "webpack && ionic build android",
+    "mock": "NODE_ENV=development babel-node mock/index.js"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
